fixed a missing logo on mobile drinks page, and made it a button across the website

--- a/src/Style.css
+++ b/src/Style.css
@@ -14,6 +14,10 @@
   margin: 0;
 }
 
+.Logo:hover {
+  cursor: pointer;
+}
+
 .container {
   background-color: var(--background-color);
 }
@@ -1417,7 +1421,7 @@ input[type="radio"]:checked + label:before {
     width: 85vw;
     height: calc(100vh - 10vh - 0.275rem);
     height: -webkit-fill-available;
-    padding: 4vh 7.5vw 6vh;
+    padding: 3rem 7.5vw 2rem;
     border-radius: 0;
     background-color: var(--background-color);
     border-top: 0.275rem solid var(--primary-color);
@@ -1448,18 +1452,17 @@ input[type="radio"]:checked + label:before {
   }
 
   .drinks__logo {
-    margin-top: 0;
     grid-column: 2 / 3;
     justify-self: center;
+    display: block;
     position: static;
-    margin: 1.8rem;
-    margin-bottom: 3rem;
+    margin: 0;
   }
 
   .drinks__main-btns {
     width: 85vw;
     display: flex;
-    margin: 9.5rem 0rem 1rem;
+    margin: 9rem 0rem 1rem;
   }
 
   .drinkcard__title > h2 {
@@ -1811,7 +1814,7 @@ input[type="radio"]:checked + label:before {
   background-color: var(--background-color);
   color: var(--primary-color);
   border-color: var(--primary-color);
-  font-weight: 400;
+  font-weight: bold;
   margin: 2rem;
   width: 10rem;
   padding: 0.4rem;
